professional.css
* { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Lato';}
.center { position: relative; left: 50%; transform: translateX(-50%);}
.block { display: block !important; }
a { text-decoration: none; cursor: pointer; }
a:hover { text-decoration: underline; }

.about-content p a {
    color: #487dff;
    font-weight: bold;
}

body { 
    background: #ecf0f1; 
    overflow-x: hidden;
}
section { position: relative; }

hr {
    width: 80px;
    margin-top: 10px;
    border: 0;
    border-top: 1px solid #487dff;
    text-align: center;
}

header {
    width: 100%;
    position: relative;
    height: calc(3 * 150px);
    background: white;
}

.stripes {
    display: flex;
    flex-flow: column nowrap;
    width: 120%;
    margin-top: -100px;
    margin-left: -50px;
    position: absolute;
}

.stripe {
    height: 150px;
    width: 100%;
    left: 0;
    right: 0;
    transform: rotate(-6deg);
}

.stripe:nth-child(1), .stripe:nth-child(4), .stripe:nth-child(7) { background: #7280fd; }
.stripe:nth-child(2), .stripe:nth-child(5), .stripe:nth-child(8) { background: #487dff; }
.stripe:nth-child(3), .stripe:nth-child(6), .stripe:nth-child(9) { background: linear-gradient(45deg, #487dff, #7280fd) }

.stripe:nth-child(7) { display: none; }
.stripe:nth-child(8) { display: none; }
.stripe:nth-child(9) { display: none; }


.hand {
    animation: waving .5s infinite ease-in-out alternate;
    transform: rotate(0deg);
}

@keyframes waving {
    0% { transform: rotate(0deg) }
    100% { transform: rotate(25deg) }
}


.header-text {
    font-family: 'Lato';
    color: white;
    padding-top: 150px;
    padding-left: 70px;
    font-weight: 300;
}

.header-text div {
    display: flex;
    flex-flow: row nowrap;
}

.header-text__subtitle { 
    font-size: 25px;
    opacity: .7;
}

.section-container {
    position: relative;
    width: 90%;
    left: 50%;
    transform: translateX(-50%);
    display: flex;
    flex-flow: row nowrap;
    font-family: 'Lato';
    padding: 50px 0;
}

.about-header {
    width: 40%;
    font-size: 30px;
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
}
.about-content {
    font-family: 'Lato';
    width: 40%;
    font-size: 20px;
    color: #333;
    letter-spacing: .3px;
}

.resume-btn {
    margin-top: 10px;
    font-family: 'Lato';
    background: #487dff;
    color: white;
    padding: 10px;
    font-size: 15px;
    cursor: pointer;
    outline: none;
}

.resume-btn:hover {
    filter: brightness(120%);
}

#about {
    background: white;
}

#experiences {
    background: #ecf0f1;
}

.experience-header {
    text-align: center;
    font-size: 30px;
}

.experience-item {
    position: relative;
    width: 80%;
    left: 50%;
    transform: translateX(-50%);
    display: flex;
    flex-flow: row nowrap;
    margin: 50px 0;
}

.item-date {
    width: 27%;
    text-align: right;
}

.item-timeline {
    width: 12%;
}

.item-timeline .circle {
    position: relative;
    height: 50px;
    width: 50px;
    border-radius: 100%;
    background: #487dff;
    left: 50%;
    transform: translateX(-50%);
}

.item-timeline .line {
    position: relative;
    background: #487dff;
    /* background: linear-gradient(#487dff, #487dff, #ecf0f1); */
    width: 5px;
    height: 100%;
    left: 50%;
    transform: translateX(-50%);
}

.item-timeline .line.last{
    background: linear-gradient(#487dff, #487dff, #ecf0f1);    
}

.circle i {
    color: white;
    position: relative;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
}


.experience-item .item-information {
    width: 63%;
    background: white;
    padding: 25px 15px;
    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.08), 0 3px 6px rgba(0, 0, 0, 0.15);
}

.item-information__name {
    font-size: 30px;
}

.item-information__tech {
    display: flex;
    flex-flow: row wrap;
}

.item-information__tech p {
    background-color: #7280fd;
    color: white;
    padding: 5px;
    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.08), 0 3px 6px rgba(0, 0, 0, 0.15);
    margin-right: 5px;
    margin-bottom: 5px;
}

.projects-header {
    font-size: 30px;
    z-index: 2;
    padding-top: 150px;
    text-align: center;
    color: white;
}

.stripes.r {
    margin-top: 100px;
    z-index: -1;
}

.stripe.r {
    transform: rotate(6deg);
}

.project-item {
    position: relative;
    left: 50%;
    transform: translateX(-50%) !important;
    width: 60%;
    height: 250px;
    background: white;
    margin-top: 50px;
    display: flex;
    flex-flow: row nowrap;
    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.08), 0 3px 6px rgba(0, 0, 0, 0.15);
}

.project-image {
    width: 250px;
    background: red;
    /* filter: grayscale(50%); */
    opacity: .8;
}

.project-item > div {
    padding: 25px 15px;
}

.github-link {
    position: relative;
    margin-top: 50px;
}

.github-link p {
    width: 50%;
    text-align: center;
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    padding: 15px 0px;
    background-color: white;
    font-size: 20px;
    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.08), 0 3px 6px rgba(0, 0, 0, 0.15);
    transition: top .2s;
    color: #222;
    top: 0;
}

.github-link p:hover {
    text-decoration: underline;
    cursor: pointer;
    top: -5px;
}

#contact {
    border-top: 1px solid #c5c8c9;
    margin-top: 150px;
    padding: 20px 0 100px 0;
    /* height: 200px; */
    background: white;
}

#contact p {
    font-size: 30px;
    padding-top: 50px;
    text-align: center;
}

.social-buttons {
    padding: 30px 0;
    display: flex;
    flex-flow: row nowrap;
    justify-content: center;
}

.social-buttons i {
    padding: 10px 20px;
    cursor: pointer;
    transition: transform .3s;
}

.social-buttons i:hover {
    transform: scale(1.1)
}

#contact .resume-btn {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    margin-bottom: 50px;
}

@media screen and (max-width: 1200px) {
    .project-item {
        width: 80%;
    }
}

@media screen and (max-width: 1000px) {
    .project-item {
        width: 95%;
    }

    .about-content, .about-header {
        width: 70%;
    }
    
    #about .section-container {
        flex-flow: column nowrap;
        padding: 0 0 50px 0;
    }
    #about .section-container div {
        position: relative;
        left: 50%;
        transform: translateX(-50%);
        text-align: center;
    }

    .about-header hr {
        margin-bottom: 10px;
    }
} 

@media screen and (max-width: 700px) {
    .header-text {
        padding-top: 80px;
        padding-left: 0;
        text-align: center;
    }
    .header-text p {
        width: 100%;
    }
    .about-content {
        width: 90%;
    }
    .hand {
        display: none;
    }
    .project-image {
        display: none;
    }
    .project-item {
        /* height: 270px; */
        height: auto;
        width: 87%;
    }
    .item-timeline {
        display: none;
    }
    .experience-item .item-information {
        width: 100%;
        left: 50%;
        position: relative;
        transform: translateX(-50%);
    }
    .experience-item .item-date {
        display: none;
    }

    #experiences div .experience-item {
        width: 90%;
    }

    .github-link p {
        width: 87%;
    }

    .stripe:nth-child(7) { display: block; }
    .stripe:nth-child(8) { display: block; }
    .stripe:nth-child(9) { display: block; }

    
}

